*** Changelog ***
= 8.5.0 - 2024-xx-xx =
* Add - Allow changing display order of payment methods in the new checkout experience.
* Fix - Prevent subscriptions using Legacy SEPA from switching to Manual Renewal when disabling the Legacy experience.
* Tweak - Add a notice in checkout for Cash App transactions above 2000 USD to inform customers about the decline risk.
* Tweak - Improve the display of warning messages related to webhook configuration.
* Fix - When using a saved payment method, update the payment method's address immediately upon checkout. Fixes issues where Stripe may throw address validation errors.
* Tweak - Add a statement descriptor preview for Cash App Payments.
* Add - Allow customizing the title and description of the UPE payment methods.
* Fix - Ensure payments via redirect are processed through the webhook if the redirect never occurs. Resolves issues of orders being left as pending payment.
* Add - Introduce a way for store managers to automatically configure webhooks on their Stripe account with a single button in the admin settings.
* Fix - Ensure subscriptions purchased with iDEAL or Bancontact are correctly set to SEPA debit prior to processing the intitial payment.
* Tweak - Stripe API version updated to support 2024-06-20.
* Fix - Ensure SEPA tokens are attached to customers in the legacy checkout experience when the payment method is saved. This addresses subscription recurring payment "off-session" errors with SEPA.
* Tweak - Limit the configure webhooks button to 1 click per minute to prevent multiple webhook creations.
* Fix - Address Klarna currency rules to ensure correct presentment and availability based on merchant and customer locations.

= 8.4.0 - 2024-06-13 =
* Tweak - Resets the list of payment methods when any Stripe key is updated.
* Fix - Removes the list of saved payment methods when the setting is disabled.
* Tweak - Update WooCommerce.com docs links.