@@ -12,7 +12,7 @@ const WebhookEndpointText = styled.strong`
 export const WebhookInformation = () => {
 	const { data } = useAccount();
 	return (
-		<p>
+		<p data-testid="webhook-information">
 			{ interpolateComponents( {
 				mixedString: __(
 					"Add the following webhook endpoint {{webhookUrl/}} to your {{settingsLink}}Stripe account settings{{/settingsLink}} (if there isn't one already). This will enable you to receive notifications on the charge statuses.",
